# ReadNext

./: .dotenv  .gitignore  LICENSE  Makefile  README.md  arxiv_categories.html  arxiv_sync.html  embedding.html  index.html  main.html  personalize.html  pyproject.toml  requirements.txt  robots.txt  search.json  settings.ini  sitemap.xml
.github/workflows/: deploy.yaml  test.yaml
_proc/: index.ipynb
nbs/: 00_main.ipynb  01_arxiv_categories.ipynb  02_arxiv_sync.ipynb  03_embedding.ipynb  04_personalize.ipynb  index.ipynb  nbdev.yml  sidebar.yml
readnext/: __init__.py  _modidx.py  arxiv_categories.py  arxiv_sync.py  embedding.py  main.py  personalize.py
scripts/: config.sh  unset_config.sh
tests/: README.md  test_arxiv_categories.py  test_arxiv_sync.py  test_embedding.py  test_personalize.py
